NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/ConfiguredSKU_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>ConfiguredSKU_Product_Family__c</fullName>
    <formula>TEXT(SBQQ__ConfiguredSKU__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configured SKU:Product Fam</label>
    <type>Text</type>
</CustomField>