NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/CONTAINER_Feature_Option_Map__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Feature_Option_Map__c</fullName>
    <label>Option&apos;s Feature name</label>
    <type>TextArea</type>
</CustomField>