NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/CONTAINER_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Model_Number__c</fullName>
    <description>This field is used store the model number of the selected product.</description>
    <inlineHelpText>This field is used store the model number of the selected product.</inlineHelpText>
    <label>Model Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>