NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/CONTAINER_STD_Cost__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_STD_Cost__c</fullName>
    <label>Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>