NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/CONTAINER_Warranty_Description__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Warranty_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>