NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/CONTAINER_Warranty_Special__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Warranty_Special__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty Special</label>
    <type>Checkbox</type>
</CustomField>