NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/CONTAINER_Warranty_Unit_Term__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Warranty_Unit_Term__c</fullName>
    <description>To get the term of the products of warranty tab.</description>
    <inlineHelpText>To get the term of the products of warranty tab.</inlineHelpText>
    <label>Warranty Unit Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 yr</fullName>
            </value>
            <value>
                <fullName>2 yrs</fullName>
            </value>
            <value>
                <fullName>3 yrs</fullName>
            </value>
            <value>
                <fullName>4 yrs</fullName>
            </value>
            <value>
                <fullName>5 yrs</fullName>
            </value>
            <value>
                <fullName>6 yrs</fullName>
            </value>
            <value>
                <fullName>7 yrs</fullName>
            </value>
            <value>
                <fullName>8 yrs</fullName>
            </value>
            <value>
                <fullName>9 yrs</fullName>
            </value>
            <value>
                <fullName>10 yrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>