NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/CTBR_Converted_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Converted_Unit_Price__c</fullName>
    <formula>IF(NOT(CTBR_Unit_Price_USD__c=0),
&quot;USD &quot; + TEXT(CTBR_Unit_Price_USD__c) + &quot; (BRL &quot; + TEXT(ROUND(CTBR_Unit_Price_USD__c*$CustomMetadata.CTBR_Exchange_Rate__mdt.CTBR_Units.Current_Rate__c,2)) + &quot;)&quot; ,&apos;USD 0.00&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTBR Converted Unit Price</label>
    <type>Text</type>
</CustomField>