NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/CTBR_Elite_Repair_Months__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Elite_Repair_Months__c</fullName>
    <label>CTBR Elite Repair Months</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CTBR_BluEdge_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CTBR_BluEdge_Months</valueSetName>
    </valueSet>
</CustomField>