NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/CTBR_Extended_Basic_Hours__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Extended_Basic_Hours__c</fullName>
    <label>CTBR Extended Basic Hours</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CTBR_BluEdge_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CTBR_BluEdge_Hours</valueSetName>
    </valueSet>
</CustomField>