NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/CTBR_Major_Component_Deductible__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Major_Component_Deductible__c</fullName>
    <label>CTBR Major Component Deductible</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CTBR_BluEdge_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CTBR_BluEdge_Deductible</valueSetName>
    </valueSet>
</CustomField>