NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/CTBR_Major_Component_Hours_Override__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Major_Component_Hours_Override__c</fullName>
    <label>CTBR Major Component Hours Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTBR_BluEdge_Hours</valueSetName>
    </valueSet>
</CustomField>