NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/CTBR_Unit__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Unit__c</fullName>
    <formula>SBQQ__ConfiguredSKU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTBR Unit</label>
    <type>Text</type>
</CustomField>