NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/CTM_Units__c.field-meta.xml
<CustomField>
    <fullName>CTM_Units__c</fullName>
    <formula>SBQQ__ConfiguredSKU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTM Units</label>
    <type>Text</type>
</CustomField>