NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Customer_Contact_for_T_C_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_for_T_C_Acceptance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact for T&amp;C Acceptance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Lynx_Fleet_End_Customer_Status__c</field>
            <operation>equals</operation>
            <value>New Customer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Options</relationshipLabel>
    <relationshipName>Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>