NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Feature_Max_Option_Count__c.field-meta.xml
<CustomField>
    <fullName>Feature_Max_Option_Count__c</fullName>
    <description>for data extracts and loads</description>
    <formula>SBQQ__Feature__r.SBQQ__MaxOptionCount__c</formula>
    <label>Feature Max Option Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>