NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Host_Unit__c.field-meta.xml
<CustomField>
    <fullName>Host_Unit__c</fullName>
    <formula>IF( SBQQ__Feature__r.Name = &apos;Host Unit&apos;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Unit</label>
    <type>Checkbox</type>
</CustomField>