NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Lynx_Fleet_End_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Lynx_Fleet_End_Customer_Status__c</fullName>
    <label>Lynx Fleet End Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>