NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Lynx_Fleet_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Lynx_Fleet_Payment_Type__c</fullName>
    <label>Lynx Fleet Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Pre-Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>