NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_Battery_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Battery_Type__c</fullName>
    <label>Battery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_CMRA_Battery_Type</valueSetName>
    </valueSet>
</CustomField>