NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_BluEdge_Price_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_Price_Type_Formula__c</fullName>
    <formula>TEXT(SBQQ__OptionalSKU__r.NATT_BluEdge_Price_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BluEdge Price Type Formula</label>
    <type>Text</type>
</CustomField>