NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_BluEdge_Terms__c.field-meta.xml
<CustomField>
    <fullName>NATT_BluEdge_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BluEdge Terms</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.NATT_Unit__c</field>
            <operation>equals</operation>
            <valueField>NATT_BluEdge_Terms__c.NATT_Unit__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.NATT_BluEdge_Price_Type__c</field>
            <operation>equals</operation>
            <valueField>NATT_BluEdge_Terms__c.NATT_BluEdge_Price_Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.NATT_Tavant_Id__c</field>
            <operation>equals</operation>
            <valueField>NATT_BluEdge_Terms__c.NATT_Tavant_ID__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NATT_BluEdge_Terms__c</referenceTo>
    <relationshipLabel>Product Options</relationshipLabel>
    <relationshipName>Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>