NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_Bundled_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Bundled_Unit_Name__c</fullName>
    <description>for data extracts and loads</description>
    <formula>SBQQ__ConfiguredSKU__r.Name</formula>
    <label>Bundled Unit Name</label>
    <type>Text</type>
</CustomField>