NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_CMRA_Supra__c.field-meta.xml
<CustomField>
    <fullName>NATT_CMRA_Supra__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This option to be included with S6, S7, S8, &amp; S9</description>
    <label>CMRA - Supra</label>
    <type>Checkbox</type>
</CustomField>