NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_CMRA_Vector__c.field-meta.xml
<CustomField>
    <fullName>NATT_CMRA_Vector__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the option to be included with the Vector Units</description>
    <label>CMRA - Vector</label>
    <type>Checkbox</type>
</CustomField>