NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_CMRA_X4__c.field-meta.xml
<CustomField>
    <fullName>NATT_CMRA_X4__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This option should be included for X4 Units</description>
    <label>CMRA - X4</label>
    <type>Checkbox</type>
</CustomField>