NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_Default_Hours__c.field-meta.xml
<CustomField>
    <fullName>NATT_Default_Hours__c</fullName>
    <formula>&quot;The default hours are 8000&quot;</formula>
    <label>Default Hours</label>
    <type>Text</type>
</CustomField>