NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_Discount__c.field-meta.xml
<CustomField>
    <fullName>NATT_Discount__c</fullName>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>