NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_Elite_Repair_Hours__c.field-meta.xml
<CustomField>
    <fullName>NATT_Elite_Repair_Hours__c</fullName>
    <label>Elite Repair Hours</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NATT_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>NATT_BluEdge_Hours</valueSetName>
    </valueSet>
</CustomField>