NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_Feature_Category__c.field-meta.xml
<CustomField>
    <fullName>NATT_Feature_Category__c</fullName>
    <description>for reporting</description>
    <formula>TEXT(SBQQ__Feature__r.SBQQ__Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feature Category</label>
    <type>Text</type>
</CustomField>