NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_Feature_Configuration_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>NATT_Feature_Configuration_Field_Set__c</fullName>
    <description>for data extracts and loads</description>
    <formula>TEXT( SBQQ__Feature__r.SBQQ__ConfigurationFieldSet__c)</formula>
    <label>Feature Configuration Field Set</label>
    <type>Text</type>
</CustomField>