NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Feature_Name__c</fullName>
    <description>for data extracts and loads</description>
    <formula>SBQQ__Feature__r.Name</formula>
    <label>Feature Name</label>
    <type>Text</type>
</CustomField>