NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_Feature_Optional_Selection_Method__c.field-meta.xml
<CustomField>
    <fullName>NATT_Feature_Optional_Selection_Method__c</fullName>
    <description>for data extracts and loads</description>
    <formula>TEXT(SBQQ__Feature__r.SBQQ__OptionSelectionMethod__c)</formula>
    <label>Feature Optional Selection Method</label>
    <type>Text</type>
</CustomField>