NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_Feature_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>NATT_Feature_Sort_Order__c</fullName>
    <formula>SBQQ__Feature__r.SBQQ__Number__c</formula>
    <label>Feature Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>