NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_Major_Component_Deductible__c.field-meta.xml
<CustomField>
    <fullName>NATT_Major_Component_Deductible__c</fullName>
    <description>natt</description>
    <label>Major Component Deductible</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NATT_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>NATT_Deductible</valueSetName>
    </valueSet>
</CustomField>