NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_Major_Component_Months_Override__c.field-meta.xml
<CustomField>
    <fullName>NATT_Major_Component_Months_Override__c</fullName>
    <label>Major Component Months Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_BluEdge_Months</valueSetName>
    </valueSet>
</CustomField>