NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_Old_Product_Option_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Old_Product_Option_Id__c</fullName>
    <description>for vlookup and data loads</description>
    <label>NATT Old Product Option Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>