NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductOption__c/fields/NATT_P_N__c.field-meta.xml
<CustomField>
    <fullName>NATT_P_N__c</fullName>
    <description>NATT</description>
    <formula>SBQQ__OptionalSKU__r.NATT_P_N__c</formula>
    <label>P/N</label>
    <type>Text</type>
</CustomField>